デザインの変更
サイドバーを削除、ヘッダーのデザイン変更

--- a/index.html
+++ b/index.html
@@ -10,57 +10,29 @@
 <body>
 	<div id="container">
 		<div id="header">
-			<div id="navigation">
-				<div id="logo">
-					<img src="./images/logo.png">
-				</div>
-				<div id="gnavi">
-					<ul>
-						<li><a href="#">Works</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">Contact</a></li>
-					</ul>
-				</div>
+		</div>
+		<div id="main-area">
+			<div id="page-info">
+				<h2>固定ページのタイトル</h2>
+				<p class="desc">これはテストです。固定ページの説明文が入ります</p>
 			</div>
-			<div id="main-image">
-				<img src="./images/main-image.png">
+			<div id="content">
+				<img src="./images/master.jpg" class="fl mr20">
+				<p>Yoshie Takeda</p>
+				<p>
+					Skill...<br>
+					* FrontEnd Engineer ( WordPress )<br>
+					* Programmer ( Android,Unity )<br>
+					* Creator ( Manga/Illust )
+				</p>
+				<p>
+					SNS...<br>
+					* Twitter<br>
+					* Facebook<br>
+					* Instagram
+				</p>
 			</div>
 		</div>
-		<div id="main-col">
-			<div id="sidebar">
-				<ul>
-					<li>テストリスト</li>
-					<li>テストリスト</li>
-					<li>テストリスト</li>
-				</ul>
-			</div>
-			<div id="main">
-				<div class="page-info">
-					<h2>固定ページのタイトル</h2>
-					<p class="desc">これはテストです。固定ページの説明文が入ります</p>
-				</div>
-				<div class="content">
-					<img src="./images/master.jpg" class="fl mr20">
-					<div class="fl">
-						<p>Yoshie Takeda</p>
-						<p>
-							Skill...<br>
-							* FrontEnd Engineer ( WordPress )<br>
-							* Programmer ( Android,Unity )<br>
-							* Creator ( Manga/Illust )
-						</p>
-						<p>
-							SNS...<br>
-							* Twitter<br>
-							* Facebook<br>
-							* Instagram
-						</p>
-					</div>
-					<div class="clear"></div>
-				</div>
-			</div>
-		</div>
-		<div class="clear"></div>
 		<div id="footer">
 			<p>.lab :: since 2016 :: by Yoshie Takeda</p>
 		</div>
