Gナビとメイン画像部分を追加
ヘッダーエリアにGナビエリアを追加、メインエリアの上部にメイン画像エリアを追加

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
 	<div id="container">
 		<div id="header">
+			<div id="gnavi">
+				
+			</div>
+		</div>
+		<div id="main-image">
+			<img src="./images/main-image.png">
 		</div>
 		<div id="main-area">
 			<div id="page-info">
