scssの構造を変更
htmlファイルにあわせて構造を変更

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
 	<div id="container">
 		<div id="header">
+			<p>てすと</p>
 			<div id="gnavi">
-				
+				<p>Gナビテスト</p>
 			</div>
 		</div>
 		<div id="main-image">
