Gナビ仮組み
Gナビのデザインを仮組み

--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
 	<div id="container">
 		<div id="header">
 			<div id="gnavi">
-				<p>Gナビテスト</p>
+				<div id="gnavi-left">
+					<ul>
+						<li>Products</li>
+						<li>Works</li>
+					</ul>
+				</div>
+				<div id="logo">
+					<img src="./images/logo.png">
+				</div>
+				<div id="gnavi-right">
+					<ul>
+						<li>Blog</li>
+						<li>Contact</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 		<div id="main-image">
