トップページコンテンツの仮組み
ダミーテキストを挿入

--- a/index.html
+++ b/index.html
@@ -33,14 +33,17 @@
 		</div>
 		<div id="main-area">
 			<div id="page-info">
-				<h2>固定ページのタイトル</h2>
-				<p class="desc">これはテストです。固定ページの説明文が入ります</p>
+				<h1>固定ページのタイトル</h1>
+				<h2>これはテストです。固定ページの説明文が入ります</h2>
 			</div>
 			<div id="content">
+				<h3>About this site</h3>
+				<p>管理人が今までに開発したアプリ・描いたイラストなどを紹介するポートフォリオサイトです。ブログなども書いています。お問い合わせなどは「Contact」からどうぞ。</p>
+				<h3>About master</h3>
 				<img src="./images/master.jpg" class="fl mr20">
-				<p>Yoshie Takeda</p>
+				<p>Yoshie Takeda（a.k.a. 冷ややっこ）</p>
 				<p>
-					Skill...<br>
+					Skills...<br>
 					* FrontEnd Engineer ( WordPress )<br>
 					* Programmer ( Android,Unity )<br>
 					* Creator ( Manga/Illust )
