メインエリアの幅・余白調整
widthを95%→90%、paddingをつけた

--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
 			</div>
 			<div id="content">
 				<h3>About this site</h3>
-				<p>管理人が今までに開発したアプリ・描いたイラストなどを紹介するポートフォリオサイトです。ブログなども書いています。お問い合わせなどは「Contact」からどうぞ。</p>
+				<p>管理人が今までに開発したアプリ・描いたイラストなどを紹介するポートフォリオサイトです。</p>
+				<p>ブログ,日記なども書いています。お問い合わせなどは「Contact」からどうぞ。</p>
 				<h3>About master</h3>
 				<img src="./images/master.jpg" class="fl mr20">
-				<p>Yoshie Takeda（a.k.a. 冷ややっこ）</p>
+				<p>Yoshie Takeda（a.k.a. 冷ややっこ）： 兵庫県在住</p>
 				<p>
-					Skills...<br>
+					スキル...<br>
 					* FrontEnd Engineer ( WordPress )<br>
 					* Programmer ( Android,Unity )<br>
 					* Creator ( Manga/Illust )
