仮組みhtmlファイルを追加
下層の固定ページの仮組みhtmlを作成

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 			<div id="gnavi">
 				<div id="gnavi-left">
 					<ul>
-						<li>Products</li>
-						<li>Works</li>
+						<li><a href="./products.html">Products</a></li>
+						<li><a href="./works.html">Works</a></li>
 					</ul>
 				</div>
 				<div id="logo">
@@ -22,8 +22,8 @@
 				</div>
 				<div id="gnavi-right">
 					<ul>
-						<li>Blog</li>
-						<li>Contact</li>
+						<li><a href="./blog.html">Blog</a></li>
+						<li><a href="./contact.html">Contact</a></li>
 					</ul>
 				</div>
 			</div>
