htmlファイルの修正
ヘッダーロゴにトップページへのリンクを挿入、下層ページのメイン画像をコメントアウト

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,9 @@
 					</ul>
 				</div>
 				<div id="logo">
-					<img src="./images/logo.png">
+					<a href="./index.html">
+						<img src="./images/logo.png">
+					</a>
 				</div>
 				<div id="gnavi-right">
 					<ul>
@@ -28,9 +30,9 @@
 				</div>
 			</div>
 		</div>
-		<div id="main-image">
+<!-- 		<div id="main-image">
 			<img src="./images/main-image.png">
-		</div>
+		</div> -->
 		<div id="main-area">
 			<div id="page-info">
 				<h1>Contact</h1>
