--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 					</ul>
 				</div>
 				<div id="logo">
-					<img src="./images/logo.png">
+					<a href="./index.html">
+						<img src="./images/logo.png">
+					</a>
 				</div>
 				<div id="gnavi-right">
 					<ul>
