スライドショーのテスト
スライドショー部分に仮画像を入れて,スピードを調整

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			$('.slide-show').slick({
 				autoplay: true,
 				arrows: false,
-				autoplaySpeed: 3500
+				autoplaySpeed: 5000
 			});
 		});
 	</script>
@@ -50,8 +50,9 @@
 		</div>
 		<div id="main-image">
 			<div class="slide-show">
-				<img src="./images/main-image.png">
-				<img src="./images/main-image.png">
+				<img src="./images/01.jpg">
+				<img src="./images/02.jpg">
+				<img src="./images/03.jpg">
 			</div>
 		</div>
 		<div id="main-area">
